# TMIDIX

./: MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml
TMIDIX/: tmidix.py
docs/: conf.py  index.rst
docs/api/: functions.rst  modules.rst
