[build-system]
requires = ["setuptools>=80.9.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "TMIDIX"
version = "26.2.28"
description = "TMIDIX module"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]
maintainers = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]
dependencies = [
  "tqdm",
  "matplotlib",
  "numpy==1.26.4"
]

keywords = [
  "MIDI",
  "MIDI motifs",
  "motifs",
  "symbolic music",
  "music",
  "music motifs",
  "motif analysis",
  "motifs analysis",
  "music information retrieval",
  "MIR",
  "music discovery",
  "music motif search",
  "music quality",
  "music metadata",
  "music recommendation",
  "research",
  "musicology",
  "music analysis",
  "motifs analysis"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console",
  "Natural Language :: English",
  "Typing :: Typed"
]

requires-python = ">=3.8"

[project.readme]
file = "TMIDIX/README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/asigalov61/TMIDIX"
SoundCloud = "https://soundcloud.com/aleksandr-sigalov-61/"
Documentation = "https://github.com/asigalov61/TMIDIX"
Issues = "https://github.com/asigalov61/TMIDIX/issues"
Discussions = "https://github.com/asigalov61/TMIDIX/discussions"
Dataset = "https://huggingface.co/datasets/projectlosangeles/Discover-MIDI-Dataset"

[project.optional-dependencies]
gpu = [
  "torch",
  "numpy==1.26.4"
]